--- a/notes.org
+++ b/notes.org
@@ -396,6 +396,7 @@ References:
 - Doc: [[https://substrate.dev/docs/en/knowledgebase/runtime/frame][FRAME]]  Framework for Runtime Aggregation of Modularized Entities (FRAME)
 - Doc: [[https://substrate.dev/docs/en/tutorials/add-a-pallet/import-a-pallet][Add a Pallet to Your Runtime]]
 - Repo: [[https://github.com/substrate-developer-hub/substrate-node-template#local-development][Substrate Node Template]]
+- Doc: [[https://paritytech.github.io/ink/ink_lang/attr.contract.html][Attribute Macro ink_lang::contract]]
 - Doc: [[https://substrate.dev/docs/en/knowledgebase/advanced/cryptography#public-key-cryptography][Cryptography]]
 - Doc: [[https://paritytech.github.io/wasmi/wasmi/index.html][wasmi]]
 - Doc: [[https://substrate.dev/docs/en/knowledgebase/advanced/consensus][Consensus]]
@@ -489,11 +490,48 @@ extern crate alloc;
 use alloc::string::String;
 #+end_src
 
-Then run ~cargo contract test~
+and build it:
 
+#+begin_src shell
+$ cargo contract build && cargo contract generate-metadata 
+ [1/3] Building cargo project
+   Compiling mytest v0.1.0 (/var/folders/g5/hf7q78jn0vngnqtqj_3qfm6r0000gn/T/cargo-contract_p7eKiU)
+error[E0412]: cannot find type `String` in this scope
+  --> /Users/aimeez/github/mytest/lib.rs:11:16
+   |
+11 |         value: String,
+   |                ^^^^^^ not found in this scope
+   |
+help: consider importing one of these items
+   |
+7  | use alloc::string::String;
+   |
+7  | use crate::String;
+   |
+#+end_src
 
+What's wrong?
+The test seems to works fine:
 
+#+begin_src shell
+$ cargo +nightly test
+warning: unused import: `alloc::string::String`
+ --> lib.rs:4:5
+  |
+4 | use alloc::string::String;
+  |     ^^^^^^^^^^^^^^^^^^^^^
+  |
+  = note: `#[warn(unused_imports)]` on by default
 
+warning: 1 warning emitted
+
+    Finished test [unoptimized + debuginfo] target(s) in 0.08s
+     Running target/debug/deps/mytest-c60315897dda6247
+
+running 2 tests
+test mytest::tests::default_works ... ok
+test mytest::tests::it_works ... ok
+#+end_src
 
 
 *** 2020-11-20 The example: flipper
